--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SSSPA</title>
-    <script src="https://use.typekit.net/imi0kep.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script type="text/javascript" src="https://use.typekit.net/imi0kep.js"></script>
+    <script type="text/javascript">try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/javascripts/vendor/draggable.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/javascripts/all.js"></script>
   </body>
 </html>
