Added updated carousel.

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
     <title>SSSPA</title>
     <script type="text/javascript" src="https://use.typekit.net/imi0kep.js"></script>
     <script type="text/javascript">try{Typekit.load({ async: true });}catch(e){}</script>
+    <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/jsx" src="/node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/jsx" src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
   </body>
 </html>
